# rust-Project

./: .gitignore
s1/http/src/: httprequest.rs  httpresponse.rs
s1/httpserver/data/: orders.json
s1/httpserver/public/: 404.html  health.html  index.html  style.css
s1/httpserver/src/: handler.rs  router.rs  server.rs
s1/tcpclient/src/: main.rs
s1/tcpserver/src/: main.rs
ws/webservice/: Cargo.toml
ws/webservice/src/: handlers.rs  state.rs
